work on preview pane and setting up the edit environment

--- a/chrome/content/editor.xhtml
+++ b/chrome/content/editor.xhtml
@@ -1,11 +1,14 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-      "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+      "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd" [
+<!ENTITY % editorDTD SYSTEM "chrome://hocr-edit/locale/editor.dtd" >
+%editorDTD;
+]>
+
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>HOCR Editor</title>
 </head>
 <body>
-test!
-<a href="javascript:alert(document.location);">click</a>
+<a href="javascript:alert(preview.location);">&saveButton.label;</a>
 </body>
 </html>
