--- a/chrome/content/editor.xhtml
+++ b/chrome/content/editor.xhtml
@@ -7,11 +7,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>HOCR Editor</title>
+<style type="text/css">
+#lines { list-style: none; padding-left: 0; }
+#lines li { padding: 1em 0em; border-bottom: 2px solid #800; }
+</style>
 <script type="application/javascript" src="chrome://hocr-edit/content/jquery.js"/>
 <script type="application/javascript" src="chrome://hocr-edit/content/editor.js"/>
 </head>
 <body>
 <a href="javascript:do_things();">Load</a>
+<a href="javascript:save();">&saveButton.label;</a>
 <ul id="lines">
 </ul>
 <img id="full_image"/>
