"save as" functionality

--- a/chrome/content/editor.xhtml
+++ b/chrome/content/editor.xhtml
@@ -16,6 +16,7 @@
 </head>
 <body>
 <a href="javascript:save();">&saveButton.label;</a>
+<a href="javascript:save_as();">&saveAsButton.label;</a>
 <ul id="lines">
 </ul>
 <img id="full_image"/>
