set up stringbundle for editor.js translations

--- a/chrome/content/editor.xhtml
+++ b/chrome/content/editor.xhtml
@@ -13,6 +13,9 @@
 </style>
 <script type="application/javascript" src="chrome://hocr-edit/content/jquery.js"/>
 <script type="application/javascript" src="chrome://hocr-edit/content/editor.js"/>
+<stringbundleset id="stringbundleset" xmlns="http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul">
+<stringbundle id="editor-bundle" src="chrome://hocr-edit/locale/editor.properties"/>
+</stringbundleset>
 </head>
 <body>
 <a href="javascript:save();">&saveButton.label;</a>
