fixed "Save As" to save future saves to same place; added "Save a Copy" command to save once to a given filename

--- a/chrome/content/editor.xhtml
+++ b/chrome/content/editor.xhtml
@@ -20,6 +20,7 @@
 <body>
 <a href="javascript:save();">&saveButton.label;</a>
 <a href="javascript:save_as();">&saveAsButton.label;</a>
+<a href="javascript:save_as(true);">&saveCopyButton.label;</a>
 <div id="document">
 </div>
 </body>
