create hocr document from image

--- a/chrome/content/editor.xhtml
+++ b/chrome/content/editor.xhtml
@@ -18,9 +18,9 @@
 </stringbundleset>
 </head>
 <body>
-<a href="javascript:save();">&saveButton.label;</a>
-<a href="javascript:save_as();">&saveAsButton.label;</a>
-<a href="javascript:save_as(true);">&saveCopyButton.label;</a>
+<a id="save-button" href="javascript:save();">&saveButton.label;</a>
+<a id="save-as-button" href="javascript:save_as();">&saveAsButton.label;</a>
+<a id="save-copy-button" href="javascript:save_as(true);">&saveCopyButton.label;</a>
 <div id="document">
 </div>
 </body>
