preliminary editing of document structure (paragraph breaks)

--- a/chrome/content/editor.xhtml
+++ b/chrome/content/editor.xhtml
@@ -9,7 +9,7 @@
 <title>HOCR Editor</title>
 <style type="text/css">
 #document ul { list-style: none; padding-left: 0; }
-#document ul li { padding: 1em 0em; border-bottom: 2px solid #800; }
+#document ul li.structure { margin: 1em 0em; background: url(red.png) repeat-x center center; }
 </style>
 <script type="application/javascript" src="chrome://hocr-edit/content/jquery.js"/>
 <script type="application/javascript" src="chrome://hocr-edit/content/editor.js"/>
