--- a/chrome/content/editor.xhtml
+++ b/chrome/content/editor.xhtml
@@ -9,7 +9,8 @@
 <title>HOCR Editor</title>
 <style type="text/css">
 #document_page ul { list-style: none; padding-left: 0; }
-#document_page ul li.structure { margin: 1em 0em; background: url(red.png) repeat-x center center; }
+#document_page ul li.structure { margin: .2em 0em; background: url(red.png) repeat-x center center; }
+#document_page ul li.hocr_line { white-space: nowrap; }
 </style>
 <script type="application/javascript" src="chrome://hocr-edit/content/jquery.js"/>
 <script type="application/javascript" src="chrome://hocr-edit/content/editor.js"/>
